# pipda

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  404.html  CLAUDE.md  README.ipynb  README.md  README.rst  dpipe.py  index.html  mkdocs.yml  pipda.py  pipedy.py  pyproject.toml  readme-usage.py  requirements.txt  setup.py  sitemap.xml  style.css  tox.ini
.github/workflows/: build.yml  docs.yml
CHANGELOG/: index.html
api/pipda/: index.html
api/pipda.context/: index.html
api/pipda.expression/: index.html
api/pipda.function/: index.html
api/pipda.operator/: index.html
api/pipda.piping/: index.html
api/pipda.reference/: index.html
api/pipda.register/: index.html
api/pipda.symbolic/: index.html
api/pipda.utils/: index.html
api/pipda.verb/: index.html
api/source/pipda/: index.html
api/source/pipda.context/: index.html
api/source/pipda.expression/: index.html
api/source/pipda.function/: index.html
api/source/pipda.operator/: index.html
api/source/pipda.piping/: index.html
api/source/pipda.reference/: index.html
api/source/pipda.register/: index.html
api/source/pipda.symbolic/: index.html
api/source/pipda.utils/: index.html
api/source/pipda.verb/: index.html
backends/: index.html
changelog/: index.html
contexts/: index.html
docs/: CHANGELOG.md  backends.md  changelog.md  contexts.md  expressions.md  functions.md  operators.md  piping.md  requirements.txt  verbs.md
expressions/: index.html
functions/: index.html
operators/: index.html
pipda/: __init__.py  _calling.py  _typechecking.py  common.py  context.py  expression.py  func.py  function.py  operator.py  operators.py  piping.py  reference.py  register.py  symbolic.py  utils.py  verb.py
piping/: index.html
search/: search_index.json
tests/: __init__.py  bak.test_pipda.py  test_calling.py  test_common.py  test_context.py  test_dpipe.py  test_expression.py  test_function.py  test_operator.py  test_pipda.py  test_pipedy.py  test_piping.py  test_plain.py  test_reference.py  test_register.py  test_symbolic.py  test_typechecker.py  test_utils.py  test_verb.py
verbs/: index.html
