[tool.poetry]
name = "pipda"
version = "0.13.1"
readme = "README.md"
description = "A framework for data piping in python"
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
executing = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-cov = "^4"
numpy = "^1.20"
pandas = "^1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef"]
show_error_codes = true
strict_optional = false

[tool.pytest.ini_options]
addopts = "-vv -W error::UserWarning -p no:asyncio --cov-config=.coveragerc --cov=pipda --cov-report xml:.coverage.xml --cov-report term-missing"
console_output_style = "progress"
junit_family = "xunit1"
filterwarnings = [
    "error",
    # "ignore::DeprecationWarning",
]

[tool.black]
line-length = 80
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
