[project]
name = "pipda"
version = "0.13.1"
readme = "README.md"
description = "A framework for data piping in python"
authors = [{name = "pwwang", email = "pwwang@pwwang.com"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "executing>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "numpy>=1.20",
    "pandas>=1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "numpy>=1.20",
    "pandas>=1.4",
]

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef"]
show_error_codes = true
strict_optional = false

[tool.pytest.ini_options]
addopts = "-vv -W error::UserWarning -p no:asyncio --cov-config=.coveragerc --cov=pipda --cov-report xml:.coverage.xml --cov-report term-missing"
console_output_style = "progress"
junit_family = "xunit1"
filterwarnings = [
    "error",
    # "ignore::DeprecationWarning",
]

[tool.black]
line-length = 80
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.pyright]
# 1 >> verb()  # missing argument
reportCallIssue = false
# 1 >> verb()  # not assigned to anything
reportUnusedExpression = false
# func.attr
reportFunctionMemberAccess = false
